<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/account_header">

        <EditTextPreference
            app:key="displayName"
            app:title="@string/disp_name_title"
            app:icon="@drawable/ic_baseline_account_circle_24"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/course_entries"
            app:entryValues="@array/course_values"
            app:key="course"
            app:title="@string/course_title"
            app:icon="@drawable/ic_graduation_hat_24dp"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/gen_header">

        <SwitchPreferenceCompat
            app:key="launchMy"
            app:title="@string/launcher_title"
            app:summaryOn="My mCSVTU will launch on StartUp"
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_login_24"
            app:summaryOff="Home Page will launch on StartUp"/>

    </PreferenceCategory>

</PreferenceScreen>